// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component should render correctly with cover variant 1`] = `
<img
  className="makeStyles-root-1 makeStyles-cover-2"
/>
`;

exports[`Image component should render correctly with no props 1`] = `
<img
  className="makeStyles-root-1"
/>
`;
